chat views added

--- a/SEconfdemoApp/app/src/main/res/values/strings.xml
+++ b/SEconfdemoApp/app/src/main/res/values/strings.xml
@@ -35,5 +35,6 @@
     <string name="sendLocation">Send Location</string>
     <string name="locationTo">Location To</string>
     <string name="write_your_message_here">Write your message here</string>
+    <string name="location_received">Location Received</string>
 
 </resources>
