--- a/SEconfdemoApp/app/src/main/res/values/strings.xml
+++ b/SEconfdemoApp/app/src/main/res/values/strings.xml
@@ -36,5 +36,6 @@
     <string name="locationTo">Location To</string>
     <string name="write_your_message_here">Write your message here</string>
     <string name="location_received">Location Received</string>
+    <string name="no_internet">Sorry,no internet connection</string>
 
 </resources>
